--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -11,39 +11,39 @@
 /*
  * Body
  */
- html {
-/*background-color: #333333;*/
- }
+html {
+    /*background-color: #333333;*/
+}
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Open Sans', sans-serif;
-  height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    height: 100%;
 }
 
 h1 {
-font-family: 'Holtwood One SC', serif;
-color: #B51F24;
-font-size: 4em;
+    font-family: 'Holtwood One SC', serif;
+    color: #B51F24;
+    font-size: 4em;
 }
 h3 {
-font-family: 'Holtwood One SC', serif;
-color: #B51F24;
-font-size: .5em;
+    font-family: 'Holtwood One SC', serif;
+    color: #B51F24;
+    font-size: .5em;
 }
 #usermenulinks {
-position: absolute;
-margin-top: -1.2em;
+    position: absolute;
+    margin-top: -1.2em;
 }
 
 p {
-margin: 1.2em;
+    margin: 1.2em;
 }
 .hugeimage {
-/*position: absolute;*/
-margin-top: -50%;
-/*margin-left: 50%;*/
-float: right;
+    /*position: absolute;*/
+    margin-top: -50%;
+    /*margin-left: 50%;*/
+    float: right;
 }
 
 .region-footer {
@@ -51,34 +51,34 @@ float: right;
 }
 
 .region-footer .block {
-margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .icon {
-margin-left: 10px;
+    margin-left: 10px;
 }
 
 #contact {
-  margin-right: auto;
+    margin-right: auto;
 
-  margin-top: 40px;
- position: absolute;
-min-height: 80px;
+    margin-top: 40px;
+    position: absolute;
+    min-height: 80px;
 }
 @media(min-width: 1200px) {
-#contact {
-margin-left: 35%;
-}
+    #contact {
+        margin-left: 35%;
+    }
 }
 @media(max-width: 1200px) {
-#contact {
-margin-left: 5%;
-}
+    #contact {
+        margin-left: 5%;
+    }
 }
 #contactinfo {
-vertical-align: 18px;
-color: #999999;
-font-size: large;
+    vertical-align: 18px;
+    color: #999999;
+    font-size: large;
 }
 
 #page-wrapper {
@@ -93,12 +93,12 @@ font-size: large;
  */
 #skip-link a,
 #skip-link a:visited {
-  display: block;
-  width: 100%;
-  padding: 2px 0 3px 0;
-  text-align: center;
-  background-color: #666;
-  color: #fff;
+    display: block;
+    width: 100%;
+    padding: 2px 0 3px 0;
+    text-align: center;
+    background-color: #666;
+    color: #fff;
 }
 
 /*
@@ -111,82 +111,82 @@ font-size: large;
 }
 
 #logo /* Wrapping link for logo */ {
-  float: left; /* LTR */
-  margin: 0;
-  padding: 0;
+    float: left; /* LTR */
+    margin: 0;
+    padding: 0;
 }
 
 #logo img {
-  vertical-align: bottom;
+    vertical-align: bottom;
 }
 
 #name-and-slogan /* Wrapper for website name and slogan */ {
-  float: left;
+    float: left;
 }
 
 @media(min-width: 1200px) {
 
-h1#site-name,
-div#site-name /* The name of the website */ {
-margin-right: auto;
-  font-size: 4em;
-  margin-left: 41%;
-  margin-top: -20px;
-}}
+    h1#site-name,
+    div#site-name /* The name of the website */ {
+        margin-right: auto;
+        font-size: 4em;
+        margin-left: 41%;
+        margin-top: -20px;
+    }}
 @media(min-width: 800px) and (max-width: 1200px) {
 
-h1#site-name,
-div#site-name /* The name of the website */ {
-margin-right: auto;
-  font-size: 4em;
-  margin-left: 32%;
-  margin-top: -20px;
-}}
+    h1#site-name,
+    div#site-name /* The name of the website */ {
+        margin-right: auto;
+        font-size: 4em;
+        margin-left: 32%;
+        margin-top: -20px;
+    }}
 @media(orientation: portrait) {
 
-h1#site-name,
-div#site-name /* The name of the website */ {
-margin-right: auto;
-  font-size: 4em;
-  margin-left: 28%;
-  margin-top: -20px;
-}}
+    h1#site-name,
+    div#site-name /* The name of the website */ {
+        margin-right: auto;
+        font-size: 4em;
+        margin-left: 28%;
+        margin-top: -20px;
+    }}
 
 #site-name a:link,
 #site-name a:visited {
-  color: #000;
-  text-decoration: none;
+    color: #000;
+    text-decoration: none;
 }
 
 #site-name a:hover h3,
 #site-name a:focus h3 {
-color: #e2585c;
+    color: #e2585c;
 }
 @media(min-width: 1200px) {
-#site-slogan /* The slogan (or tagline) of a website */ {
-margin-left: 37%;
-margin-top:-20px;
-font-weight: 800;
-color: #AEAEAE;
-}}
+    #site-slogan /* The slogan (or tagline) of a website */ {
+        margin-left: 37%;
+        margin-top:-20px;
+        font-weight: 800;
+        color: #AEAEAE;
+    }}
 @media (max-width: 1200px) {
-#site-slogan {
-margin-left: 25%;
-margin-top:-20px;
-font-weight: 800;
-color: #AEAEAE;
-}
+    #site-slogan {
+        margin-left: 25%;
+        margin-top:-20px;
+        font-weight: 800;
+        color: #AEAEAE;
+    }
 }
 @media(orientation: portrait) {
-#site-slogan {
-margin-left: 9%;
-margin-top:-20px;
-font-weight: 800;
-color: #AEAEAE;
-}
+    #site-slogan {
+        margin-left: 9%;
+        margin-top:-20px;
+        font-weight: 800;
+        color: #AEAEAE;
+    }
 }
 .region-header /* Wrapper for any blocks placed in the header region */ {
-  clear: both; /* Clear the logo */
+    clear: both; /* Clear the logo */
 }
 
 /*
@@ -200,45 +200,45 @@ color: #AEAEAE;
 
 
 #page-title {
-margin-top: 5%;
-margin-left: 10%;
+    margin-top: 5%;
+    margin-left: 10%;
 }
+/*
 @media(min-width: 1200px) {
-.node-type-resume #contentbody {
-margin-left: 10%;
-}}
+    .node-type-resume #contentbody {
+        margin-left: 10%;
+    }
+}
 @media(max-width: 1200px) {
-#contentbody {
-margin-left: -10%;
+    #contentbody {
+    }
+    .node-type-resume #contentbody {
+        margin-left: -23%;
+    }
 }
-.node-type-resume #contentbody {
-margin-left: -23%;
-}
-}
-
-
+*/
 @media(min-width: 1200px) {
-#contentbody {
-width: 60%;
-}}
+    #contentbody {
+        width: 60%;
+    }}
 @media(max-width: 1200px) {
-#contentbody {
-width: 80%;
-}
-.page-photos #contentbody {
-width: 60%;
-margin-left: -15%;
-}}
+    #contentbody {
+        width: 80%;
+    }
+    .page-photos #contentbody {
+        width: 60%;
+        margin-left: -15%;
+    }}
 
 @media(max-width: 1024px) {
-#contentbody{
-min-height: 1100px;
-margin-top: 7%;
-}}
+    #contentbody{
+        min-height: 1100px;
+        margin-top: 7%;
+    }}
 @media(min-width: 1024px) {
-#contentbody{
-min-height: 600px;
-}}
+    #contentbody{
+        min-height: 600px;
+    }}
 
 #content .section {
 }
@@ -247,7 +247,7 @@ min-height: 600px;
 }
 
 .breadcrumb /* The path to the current page in the form of a list of links */ {
-  padding-bottom: 0; /* Undo system.css */
+    padding-bottom: 0; /* Undo system.css */
 }
 
 h1.title, /* The title of the page */
@@ -256,24 +256,24 @@ h2.block-title, /* Block title */
 h2.title, /* Comment section heading */
 h2.comment-form, /* Comment form heading */
 h3.title /* Comment title */ {
-  margin: 0;
+    margin: 0;
 }
 
 tr.even /* Some tables have rows marked even or odd. */ {
-  /* background-color: #eee; */ /* Drupal core uses a #eee background */
+    /* background-color: #eee; */ /* Drupal core uses a #eee background */
 }
 
 tr.odd {
-  /* background-color: #eee; */ /* Drupal core uses a #eee background */
+    /* background-color: #eee; */ /* Drupal core uses a #eee background */
 }
 
 div.messages /* Important messages (status, warning, and error) for the user. See also the declarations in messages.css. */ {
-  margin: 1.5em 0; /* Drupal core uses "6px 0" margin */
+    margin: 1.5em 0; /* Drupal core uses "6px 0" margin */
 }
 
 div.messages ul {
-  margin-top: 0;
-  margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 div.status /* Normal priority messages */ {
@@ -281,7 +281,7 @@ div.status /* Normal priority messages */ {
 
 div.warning,
 tr.warning /* Medium priority messages */ {
-  /* border: 1px solid #f0c020; */ /* Drupal core uses: 1px solid #f0c020 */
+    /* border: 1px solid #f0c020; */ /* Drupal core uses: 1px solid #f0c020 */
 }
 
 div.error,
@@ -289,11 +289,11 @@ tr.error /* High priority messages. See also the .error declaration below. */ {
 }
 
 .error /* Errors that are separate from div.messages status messages. */ {
-  /* color: #e55; */ /* Drupal core uses a #e55 background */
+    /* color: #e55; */ /* Drupal core uses a #e55 background */
 }
 
 .warning /* Warnings that are separate from div.messages status messages. */ {
-  /* color: #e09010; */ /* Drupal core uses a #e09010 background */
+    /* color: #e09010; */ /* Drupal core uses a #e09010 background */
 }
 
 div.tabs /* See also the tabs.css file. */ {
@@ -312,19 +312,19 @@ ul.links /* List of links */ {
 }
 
 ul.links.inline {
-  display: block; /* Let the links be inline, but the container be a block. */
+    display: block; /* Let the links be inline, but the container be a block. */
 }
 
 ul.links li {
-  padding: 0 1em 0 0; /* LTR */
+    padding: 0 1em 0 0; /* LTR */
 }
 
 .item-list .pager /* A list of page numbers when more than 1 page of content is available */ {
-  padding: 0;
+    padding: 0;
 }
 
 .item-list .pager li /* Each page number in the pager list */ {
-  padding: 0 0.5em;
+    padding: 0 0.5em;
 }
 
 .feed-icon /* The link to the RSS or Atom feed for the current list of content */ {
@@ -361,7 +361,7 @@ ul.links li {
  * Footer
  */
 .region-footer {
-height: 100px;
+    height: 100px;
 }
 
 /*
@@ -373,117 +373,171 @@ height: 100px;
 /*Additional Custom */
 
 .webform-client-form label {
-display: inline-block;
-width: 117px;
+    display: inline-block;
+    width: 117px;
 }
 .entitytype-contact_form-form label{
     display: inline-block;
-        width: 117px;
+    width: 117px;
 }
 .entitytype-contact_form-form {
     margin-left: 50px;
 }
 .webform-client-form {
-margin-left: 20px;
+    margin-left: 20px;
 }
 .links {
-margin-left: 20px;
+    margin-left: 20px;
 }
 @media(min-width: 1200px) {
-div.tabs {
-margin-left: 120px;
-width: 960px;
-}}
+    div.tabs {
+        margin-left: 120px;
+        width: 960px;
+    }}
 .views-view-grid td {
-padding-right: 5px;
+    padding-right: 5px;
 }
 .node-type-resume .resume {
-box-shadow: 2px 2px 5px 5px #7C7C7C;
-background-color: #F0F0F0;
-margin-bottom: 30px;
-max-width: 1000px;
+    box-shadow: 2px 2px 5px 5px #7C7C7C;
+    background-color: #F0F0F0;
+    margin-bottom: 30px;
+    max-width: 1000px;
 }
 .node-type-resume #contentbody {
-width: 60%;
+    width: 60%;
 }
 
 .node-type-resume dt {
-font-style: italic;
-font-weight: bold;
-font-size: 18px;
-text-align: right;
-padding: 0 26px 0 0;
-width: 17%;
-float: left;
-height: 100px;
-border-right: 1px solid #999;
- }
- @media(max-width: 960px) {
-  .node-type-resume #contentbody {
- width: 120%;
- }   
- }
- @media(min-width:961px) {
- .node-type-resume #contentbody {
- width: 80%;
- }
- }
- .node-type-resume dd {
- margin-right: 10%;
- }
- 
+    font-style: italic;
+    font-weight: bold;
+    font-size: 18px;
+    text-align: right;
+    padding: 0 26px 0 0;
+    width: 17%;
+    float: left;
+    height: 100px;
+    border-right: 1px solid #999;
+}
+
+/**
+Make all of this "real" resposive. Right now it is all technical debt from 
+earlier iteration.
+**/
+
+
+/**
+
+Less than 700px breakpoint
+
+**/
+
+@media(max-width: 700px) {
+
+    #site-slogan {
+        margin-left: 2%;
+    }
+    h1#site-name, div#site-name {
+        margin-left: 2%;
+    }
+
+    .node-type-resume .resume {
+        max-width: 500px;    
+    }
+
+    .node-type-resume dt {
+        width: 20%;
+        font-size: 16px;
+    }
+    .node-type-resume dd {
+        margin-right: 10%;
+        margin-left: 30%;
+        float: none !important;
+    }
+
+    .node-type-resume h4 {
+        font-size: 16px;
+        margin: 0 0 6px 0;
+        position: relative;
+    }
+
+    .node-type-resume .resume p {
+        margin: 0 0 12px 0;
+    }
+
+}
+
+@media(min-width: 701px) {
+    .node-type-resume #block-print-ui-print-links {
+        margin-top: 40px;
+    }
+}
+
+@media(max-width: 960px) {
+    .node-type-resume #contentbody {
+        width: 120%;
+    }   
+}
+@media(min-width:961px) {
+    .node-type-resume #contentbody {
+        width: 80%;
+    }
+}
+.node-type-resume dd {
+    margin-right: 10%;
+}
+
 .node-type-resume #experiencedt {
- height: 800px;
- }
- .node-type-resume #contactdt {
- height: 75px;
- }
- .node-type-resume dd {
-     float: right;
-     width: 60%;
- }
+    height: 800px;
+}
+.node-type-resume #contactdt {
+    height: 75px;
+}
+.node-type-resume dd {
+    float: right;
+    width: 60%;
+}
 .node-type-resume h4 {
-font-size: 20px;
-margin: 0 0 6px 0;
-position: relative;
- }
+    font-size: 20px;
+    margin: 0 0 6px 0;
+    position: relative;
+}
 
 .node-type-resume h4 span {
-position: absolute;
-bottom: 0; right: 0;
-font-style: italic;
-font-family: Georgia, Serif;
-font-size: 16px;
-color: #999;
-font-weight: normal;
- }
+    position: absolute;
+    bottom: 0; right: 0;
+    font-style: italic;
+    font-family: Georgia, Serif;
+    font-size: 16px;
+    color: #999;
+    font-weight: normal;
+}
 
-.node-type-resume p {
-margin: 0 0 16px 0;
+.node-type-resume .resume p {
+    margin: 0 0 16px 0;
 }
 
 .node-type-resume ul {
-margin: 0 0 32px 17px;
- }
- 
+    margin: 0 0 32px 17px;
+}
+
 .node-type-resume dl {
-padding-top: 30px;
+    padding-top: 30px;
 }
 .row-first img {
-width: 220px;
-height: 147px;
+    width: 220px;
+    height: 147px;
 }
 .views-field-title {
-font-family: 'Holtwood One SC', serif;
-color: #B51F24;
-font-size: 10px;
+    font-family: 'Holtwood One SC', serif;
+    color: #B51F24;
+    font-size: 10px;
 }
 .gmap-popup img {
-width: 100px;
-height: 140px;
+    width: 100px;
+    height: 140px;
 }
 .field-name-field-location-image field-type-image {
-margin-left: 1.2em;
+    margin-left: 1.2em;
 }
 .page-tasks .vertical-tabs {
     display: none;
@@ -534,7 +588,7 @@ div.messages {
 }
 
 .page-calendar .views-field-title {
-     font-family: "Open Sans",sans-serif;
+    font-family: "Open Sans",sans-serif;
 }
 .page-tasks .views-field-views-bulk-operations {
     padding-right: 1em;
@@ -546,12 +600,45 @@ div.messages {
 .page-calendar #content .section {
     margin-top: 50px;
 }
- .resume-section {
-    margin-left: 200px;
+@media(min-width:700px) {
+    .resume-section {
+        margin-left: 200px;
+    }
+}
+@media(max-width:700px) {
+    .resume-section {
+        margin-left: 25px;
+    }
 }
 #edit-parameter-days-settings-help-php {
     display: none;
 }
 #edit-parameter-days-settings-help-token {
     display: none;
+}
+@media(min-width: 700px) {
+    #mm-icon-button {
+        display: none;
+    }
+}
+#mm-icon-button {
+    width: 50px;
+    height: 50px;
+}
+@media(max-width: 700px) {
+    #superfish-1 {
+        display: none;
+    }
+}
+.mmenu-block-title {
+    color: #B51F24;
+}
+.mm-list, .mm-menu, .mm-header, #mmenu_left, .mmenu-nav.mm-basic > .mm-list li.mmenu-expanded .mmenu-block-expanded {
+    background-color: #F9F9F9;
+}
+.mmenu-nav.mm-basic > .mm-header, .mmenu-nav.mm-basic > .mm-list li.mmenu-expanded .mmenu-block-expanded {
+    background: #F9F9F9;
+}
+.mmenu-nav.mm-basic > .mm-list li {
+    border-top: none;
 }
