--- a/sites/all/themes/andy/css/layout-liquid.css
+++ b/sites/all/themes/andy/css/layout-liquid.css
@@ -79,9 +79,11 @@ margin-bottom: 0em;
   padding: 0;
 }
 
+@media(min-width: 810px) {
 .sidebar-first #content .section {
   padding-left: 250px; /* LTR */ /* The width + left margin of .region-sidebar-first. */
   padding-right: 0; /* LTR */
+}
 }
 
 .sidebar-second #content .section {
