removed max-width for portrait

--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -486,7 +486,7 @@ Less than 700px breakpoint
     }
 
     .node-type-resume .resume {
-        max-width: 500px;    
+        /*max-width: 500px;    */
     }
 
     .node-type-resume dt {
