Removing left margin

--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -199,6 +199,9 @@ text-align: center;
 #content .section #page-title {
         margin-left: -250px;
 }
+.front #content .section #page-title {
+    margin-left: 0px;
+}
 #page-title {
         text-align: center;
 }
