--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -881,17 +881,62 @@ input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hove
 }
 }
 
-.front #content .section #page-title {
+/*.front #content .section #page-title {
     position: absolute;
     top: 75%;
     left: 50%;
     height: 50%;
     width: 50%;
     margin: -20% 0 0 -25%;
-}
+}*/
 .sf-menu.sf-style-gray li:last-child a {
     border-bottom: none;
 }
 .sf-menu.sf-style-gray li:first-child a {
     border-top: none;
+}
+
+/* Possibly remove many of these rules when you switch to a better footer system */
+
+.front #content .section #page-title {
+    top: 50%;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto auto;
+    position: absolute;
+    text-align: center !important;
+}
+
+@media screen and (max-width: 1050px) {
+    .front #content .section #page-title {
+        top: 45%;
+    }
+}
+@media screen and (max-width: 740px) {
+.front #content .section #page-title {
+    top: 40%;
+}
+}
+
+@media screen and (max-width: 565px) {
+.front #content .section #page-title {
+    top: 35%; 
+}
+}
+@media screen and (max-width: 380px) {
+.front #content .section #page-title {
+    top: 30%;
+}
+}
+@media screen and (max-width: 290px) {
+.front #content .section #page-title {
+        top: 25%;
+}
+}
+
+@media screen and (max-width: 350px) {
+    .front #content .section #page-title {
+ font-size: 2em;   
+    }
 }
