Switching to VH

--- a/sites/all/themes/andy/css/page-backgrounds.css
+++ b/sites/all/themes/andy/css/page-backgrounds.css
@@ -37,7 +37,7 @@ width: 100%;
 #main-wrapper {
 background-repeat:no-repeat;
 background-position:right bottom; 
-min-height: 700px;
+    min-height: 100vh;
     background-image: url(/sites/default/files/great_wall_red_normal_optimized.jpg);
     background-size: cover;
 }
