--- a/sites/all/themes/andy/css/page-backgrounds.css
+++ b/sites/all/themes/andy/css/page-backgrounds.css
@@ -37,7 +37,8 @@ width: 100%;
 #main-wrapper {
 background-repeat:no-repeat;
 background-position:right bottom; 
-    min-height: 100vh;
+    /*min-height: 100vh;*/
+        min-height: calc(100vh - 215px);
     background-image: url(/sites/default/files/great_wall_red_normal_optimized.jpg);
     background-size: cover;
 }
