--- a/sites/all/themes/andy/css/page-backgrounds.css
+++ b/sites/all/themes/andy/css/page-backgrounds.css
@@ -38,9 +38,17 @@ width: 100%;
 background-repeat:no-repeat;
 background-position:right bottom; 
     /*min-height: 100vh;*/
-        min-height: calc(100vh - 295px);
+        min-height: calc(100vh - 215px);
     background-image: url(/sites/default/files/great_wall_red_big_more_optimized.jpg);
     background-size: cover;
+}
+
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+min-height: calc(100vh - 370px);
 }
 
 @media (max-width: 1200px) {
