--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -973,3 +973,7 @@ input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hove
  font-size: 2em;   
     }
 }
+
+#mm-icon-button {
+    margin-left: 200px;
+}
