--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -976,3 +976,7 @@ input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hove
  font-size: 2em;   
     }
 }
+.mmenu-nav.mm-basic > .mm-list li > a:not(.mm-subopen):not(.mm-subclose):not(.mm-fullsubopen) {
+    padding: 30px 20px;
+    white-space: normal;
+}
