--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -994,3 +994,89 @@ input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hove
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
     color: #fff;
 }
+
+.page-projects #contentbody {
+    float: none;
+    display: table;
+    margin: 0 auto;
+}
+
+.page-projects .view-projects .views-row {
+    margin-top: 1em;
+    margin-bottom: 1em;
+    cursor: pointer;
+}
+
+.page-projects .view-projects .views-column {
+    display: inline-block;
+        padding-left: 1em;
+    padding-right: 1em;
+    border-radius: 20px;
+    border: 3px solid #AEAEAE;
+    background-color: #AEAEAE;
+}
+
+.page-projects .view-projects .views-column:hover {
+        border: 3px solid #d9d9d9;
+    background-color: #d9d9d9;
+}
+
+.page-projects .view-projects .views-column img {
+        object-fit: cover;
+    max-height: 108px;
+}
+
+.page-projects .view-projects .views-field-title {
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: .5em;
+    
+}
+
+@media(max-width: 810px) {
+    .page-projects #content .section {
+    text-align: center;
+}
+}
+
+.page-projects .view-projects .views-label-field-project-categories {
+        color: #B51F24;
+    text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+        font-weight: 800;
+}
+
+.page-projects .view-projects .views-field-title a {
+    text-decoration: none;
+    color: #B51F24;
+    text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+}
+
+.page-projects .view-projects .views-field-field-project-categories {
+    text-align: center;
+}
+
+.page-projects .view-projects .views-field-title a:hover {
+    color: #B51F24;
+}
+
+#imageDetails {
+        font-family: 'Open Sans', sans-serif;
+        font-size: 18px;
+        text-align: center !important;
+}
+#imageData #imageDetails {
+    width: 100%;
+}
+
+#imageData #caption {
+    font-weight: bold;
+    line-height: 1.5em;
+}
+
+#imageDetails p {
+    display: none;
+}
+
+#numberDisplay {
+    display: none !important;
+}
