--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1036,6 +1036,7 @@ margin-right: 1em;
 .views-field-field-project-image img {
     width: 100%;
     height: auto;
+        margin-bottom: 2em;
 }
 
 .page-projects .view-projects .views-field-title {
