--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1034,7 +1034,7 @@ margin-right: 1em;
 }*/
 
 .views-field-field-project-image img {
-    width: 100%;
+        width: 100%;
     height: auto;
         margin-bottom: 2em;
 }
@@ -1042,7 +1042,7 @@ margin-right: 1em;
 .page-projects .view-projects .views-field-title {
     text-align: left;
     width: 35%;
-    margin-top: 5em;
+    margin-top: 6em;
     position: absolute;
     margin-left: 3em;
 }
@@ -1051,10 +1051,13 @@ margin-right: 1em;
     .page-projects #content .section {
     text-align: center;
 }
+
 }
 
-.page-projects .view-projects .view-header {
+@media(min-width: 810px) {
+    .page-projects .view-projects .view-header {
     margin-left: 250px;
+}
 }
 
 .page-projects .view-projects .views-label-field-project-categories {
@@ -1064,10 +1067,28 @@ margin-right: 1em;
 }
 
 .page-projects .view-projects .views-field-title a {
-        font-size: 40px;
+        font-size: 4em;
     text-decoration: none;
     color: #B51F24;
     text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+}
+
+@media(max-width: 1000px) {
+    .page-projects .view-projects .views-field-title a {
+        font-size: 3em;
+    }
+}
+
+@media(max-width: 810px) {
+    .page-projects .view-projects .views-field-title a {
+        font-size: 4em;
+    }
+}
+
+@media(max-width: 810px) {
+    .page-projects .view-projects .views-column {
+        width: 95%;
+    }
 }
 
 .page-projects .view-projects .views-field-field-project-categories {
