--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1060,6 +1060,15 @@ margin-right: 1em;
 }
 }
 
+@media(orientation: portrait) {
+    .page-projects .view-projects .view-header {
+    margin-left: 0px;
+}
+.views-field-field-project-image img {
+    width: 100%;
+}
+}
+
 .page-projects .view-projects .views-label-field-project-categories {
         color: #B51F24;
     text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
