--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1067,6 +1067,11 @@ margin-right: 1em;
 .views-field-field-project-image img {
     width: 100%;
 }
+
+
+.page-projects .view-projects .views-column {
+    width: 95%;
+}
 }
 
 .page-projects .view-projects .views-label-field-project-categories {
