--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1072,6 +1072,10 @@ margin-right: 1em;
 .page-projects .view-projects .views-column {
     width: 95%;
 }
+
+.page-projects .view-projects .views-field-title a {
+ font-size: 4em;   
+}
 }
 
 .page-projects .view-projects .views-label-field-project-categories {
