--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1087,14 +1087,6 @@ margin-right: 1em;
     text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
         font-weight: 800;
 }
-
-.page-projects .view-projects .views-field-title a {
-        font-size: 4em;
-    text-decoration: none;
-    color: #B51F24;
-    text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
-}
-
 @media(max-width: 1000px) {
     .page-projects .view-projects .views-field-title a {
         font-size: 3em;
@@ -1173,4 +1165,13 @@ filter: brightness(50%);
 .page-projects .view-projects .views-field-title a {
     color: #FFF;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+            font-size: 4em;
+    text-decoration: none;
+}
+
+@media(orientation: portrait) and (orientation: landscape) {
+.page-projects .view-projects .views-field-title a {
+    color: #B51F24;
+    text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+}
 }
