--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1163,8 +1163,9 @@ filter: brightness(50%);
 }
 
 .page-projects .view-projects .views-field-title a {
-            font-size: 4em;
+    font-size: 6em;
     text-decoration: none;
-        color: #B51F24;
+    color: #B51F24;
     text-shadow: -1px -1px 0 #FFF, 1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF;
+    line-height: 1em;
 }
