--- a/sites/all/themes/andy/css/pages.css
+++ b/sites/all/themes/andy/css/pages.css
@@ -1179,6 +1179,12 @@ filter: brightness(50%);
         width: 95%;
     }
 }
+
+@media(orientation: portrait), (orientation: landscape) {
+    .page-projects .view-projects .views-column {
+        width: 95%;
+    }
+}
 .project-banner {
     background-color: #AEAEAE;
     padding-top: 1em;
